[gd_scene load_steps=6 format=3 uid="uid://dvepymrn8at68"]

[ext_resource type="Script" uid="uid://bn3as75lo31pi" path="res://scripts/promotion_window.gd" id="1_nehcp"]
[ext_resource type="Texture2D" uid="uid://6kyp2lp74dvc" path="res://assets/pieces/queen.png" id="2_jnspa"]
[ext_resource type="Texture2D" uid="uid://bp5qcyysyw0fu" path="res://assets/pieces/knight.png" id="3_j6kk2"]
[ext_resource type="Texture2D" uid="uid://04g25hv5araw" path="res://assets/pieces/rook.png" id="4_55f2m"]
[ext_resource type="Texture2D" uid="uid://b3fbi27h1ams5" path="res://assets/pieces/bishop.png" id="5_2u7xw"]

[node name="PromotionWindow" type="Node2D"]
script = ExtResource("1_nehcp")

[node name="QueenSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_jnspa")

[node name="KnightSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_j6kk2")

[node name="RookSprite" type="Sprite2D" parent="."]
texture = ExtResource("4_55f2m")

[node name="BishopSprite" type="Sprite2D" parent="."]
texture = ExtResource("5_2u7xw")
